--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Diction Rule Lookup</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Germania+One&family=Italiana&family=Kaushan+Script&family=Tenor+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Germania+One&family=Italiana&family=Kaushan+Script&family=Nunito+Sans:opsz,wght@6..12,400;6..12,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
