switching gears for netlify deploy

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Start Single Page Apps for GitHub Pages -->
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Diction Rule Lookup</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Germania+One&family=Italiana&family=Kaushan+Script&family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,700;1,6..12,400&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Germania+One&family=Italiana&family=Kaushan+Script&family=Nunito+Sans:ital,opsz,wght@0,6..12,400;0,6..12,700;1,6..12,400&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
